--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <body>
         <p>
-            Life is easy now
+            Life is easy now DFFFKLDFLKSALKAF:LK
+            <a href="https://www.google.com">Googlwe!@</a>
         </p>
     </body>
     
